@@ -48,285 +48,286 @@ class ProdutoServiceTest {
     private ValidadorConteudoService validadorConteudoService;
 
     @Mock
-    private MultipartFile imagem;
+    private MultipartFile imagem1;
 
-    private Pessoa pessoaUsuario;
-    private Pessoa pessoaAdmin;
+    @Mock
+    private MultipartFile imagem2;
+
     private Produto produto;
+    private Pessoa anunciante;
+    private Pessoa admin;
+    private Pessoa outroUsuario;
 
     @BeforeEach
     void setUp() {
         MockitoAnnotations.openMocks(this);
 
-        pessoaUsuario = new Pessoa();
-        pessoaUsuario.setId(1);
-        pessoaUsuario.setPerfil(EnumPerfil.USUARIO);
-        pessoaUsuario.setNome("Usuario Teste");
+        anunciante = new Pessoa();
+        anunciante.setId(1);
+        anunciante.setNome("João Anunciante");
+        anunciante.setPerfil(EnumPerfil.USUARIO);
+        anunciante.setSituacao(true);
+        anunciante.setImagemUsuarioEmBase64("imagemAnunciante");
 
-        pessoaAdmin = new Pessoa();
-        pessoaAdmin.setId(2);
-        pessoaAdmin.setPerfil(EnumPerfil.ADMINISTRADOR);
-        pessoaAdmin.setNome("Admin Teste");
+        admin = new Pessoa();
+        admin.setId(2);
+        admin.setNome("Admin User");
+        admin.setPerfil(EnumPerfil.ADMINISTRADOR);
+        admin.setSituacao(true);
+
+        outroUsuario = new Pessoa();
+        outroUsuario.setId(3);
+        outroUsuario.setNome("Outro Usuario");
+        outroUsuario.setPerfil(EnumPerfil.USUARIO);
+        outroUsuario.setSituacao(true);
 
         produto = new Produto();
         produto.setId(1);
         produto.setNome("Produto Teste");
-        produto.setDescricao("Descrição teste");
+        produto.setDescricao("Descrição do produto teste");
         produto.setPreco(100.0);
-        produto.setAnunciante(pessoaUsuario);
+        produto.setAltura(10);
+        produto.setLargura(20);
+        produto.setComprimento(30);
+        produto.setPesoSuportado(50);
+        produto.setAnunciante(anunciante);
         produto.setStatus(StatusProduto.ATIVO);
+        produto.setDataCadastro(LocalDate.now());
         produto.setImagens(Arrays.asList("imagem1", "imagem2"));
-        produto.setDataCadastro(LocalDate.from(LocalDateTime.now()));
+        produto.setDatasIndisponiveis(new ArrayList<>());
     }
 
-    @Test
-    void testSalvarProdutoComImagemValida() throws Exception {
-        Produto produto = new Produto();
-        List<MultipartFile> imagens = List.of(imagem);
+    // ========== TESTES PARA salvar ==========
 
-        when(imagem.getSize()).thenReturn(1024L);
-        when(imagemService.processarImagem(any())).thenReturn("base64");
-        when(authService.getPessoaAutenticada()).thenReturn(pessoaUsuario);
+    @Test
+    void testSalvar_ComSucesso() throws Exception {
+        List<MultipartFile> imagens = Arrays.asList(imagem1, imagem2);
+
+        when(authService.getPessoaAutenticada()).thenReturn(anunciante);
+        when(imagem1.getSize()).thenReturn(1024L);
+        when(imagem2.getSize()).thenReturn(2048L);
+        when(imagemService.processarImagem(imagem1)).thenReturn("base64_1");
+        when(imagemService.processarImagem(imagem2)).thenReturn("base64_2");
+        when(produtoRepository.save(any(Produto.class))).thenReturn(produto);
 
         produtoService.salvar(produto, imagens);
 
         verify(produtoRepository).save(any(Produto.class));
-        verify(validadorConteudoService).validar(any());
+        verify(validadorConteudoService).validar(produto);
+        verify(imagemService, times(2)).processarImagem(any());
+        assertEquals(anunciante, produto.getAnunciante());
     }
 
     @Test
-    void testSalvarProdutoSemImagens() throws Exception {
-        Produto produto = new Produto();
-
-        when(authService.getPessoaAutenticada()).thenReturn(pessoaUsuario);
+    void testSalvar_SemImagens_ComSucesso() throws Exception {
+        when(authService.getPessoaAutenticada()).thenReturn(anunciante);
+        when(produtoRepository.save(any(Produto.class))).thenReturn(produto);
 
         produtoService.salvar(produto, null);
 
         verify(produtoRepository).save(any(Produto.class));
-        verify(validadorConteudoService).validar(any());
+        verify(validadorConteudoService).validar(produto);
+        verify(imagemService, never()).processarImagem(any());
     }
 
     @Test
-    void testSalvarProdutoComListaImagensVazia() throws Exception {
-        Produto produto = new Produto();
-        List<MultipartFile> imagens = new ArrayList<>();
+    void testSalvar_MuitasImagens_DeveLancarExcecao() {
+        List<MultipartFile> imagens = Arrays.asList(imagem1, imagem2, imagem1, imagem2, imagem1); // 5 imagens
 
-        when(authService.getPessoaAutenticada()).thenReturn(pessoaUsuario);
-
-        produtoService.salvar(produto, imagens);
-
-        verify(produtoRepository).save(any(Produto.class));
-        verify(validadorConteudoService).validar(any());
-    }
-
-    @Test
-    void testSalvarProdutoComMuitasImagens() {
-        Produto produto = new Produto();
-        List<MultipartFile> imagens = new ArrayList<>();
-        for (int i = 0; i < 5; i++) imagens.add(imagem);
+        when(authService.getPessoaAutenticada()).thenReturn(anunciante);
 
         LudiBoxException exception = assertThrows(LudiBoxException.class,
                 () -> produtoService.salvar(produto, imagens));
 
-        assertEquals("Número máximo de imagens excedido. Máximo permitido: 4", exception.getMessage());
+        assertEquals("Imagens", exception.getCampo());
+        assertEquals("Número máximo de imagens excedido. Máximo permitido: 4", exception.getMensagem());
         assertEquals(HttpStatus.BAD_REQUEST, exception.getHttpStatus());
     }
 
     @Test
-    void testSalvarProdutoComImagemMuitoGrande() throws IOException {
-        Produto produto = new Produto();
-        List<MultipartFile> imagens = List.of(imagem);
+    void testSalvar_ImagemMuitoGrande_DeveLancarExcecao() {
+        List<MultipartFile> imagens = Arrays.asList(imagem1);
 
-        when(imagem.getSize()).thenReturn(3 * 1024 * 1024L); // 3MB
-        when(authService.getPessoaAutenticada()).thenReturn(pessoaUsuario);
+        when(authService.getPessoaAutenticada()).thenReturn(anunciante);
+        when(imagem1.getSize()).thenReturn(3 * 1024 * 1024L); // 3MB
 
         LudiBoxException exception = assertThrows(LudiBoxException.class,
                 () -> produtoService.salvar(produto, imagens));
 
-        assertTrue(exception.getMessage().contains("Tamanho máximo da imagem excedido"));
+        assertEquals("Imagens", exception.getCampo());
+        assertTrue(exception.getMensagem().contains("Tamanho máximo da imagem excedido"));
         assertEquals(HttpStatus.BAD_REQUEST, exception.getHttpStatus());
     }
 
+
     @Test
-    void testAtualizarProdutoComSucesso() throws Exception {
+    void testAtualizar_ComSucesso() throws Exception {
         Produto produtoAtualizado = new Produto();
         produtoAtualizado.setNome("Produto Atualizado");
         produtoAtualizado.setDescricao("Nova descrição");
-        produtoAtualizado.setPreco(200.0);
-        produtoAtualizado.setImagens(Arrays.asList("imagem_existente"));
+        produtoAtualizado.setPreco(150.0);
+        produtoAtualizado.setStatus(StatusProduto.ATIVO);
 
-        when(authService.getPessoaAutenticada()).thenReturn(pessoaUsuario);
+        when(authService.getPessoaAutenticada()).thenReturn(anunciante);
         when(produtoRepository.findById(1)).thenReturn(Optional.of(produto));
+        when(produtoRepository.save(any(Produto.class))).thenReturn(produto);
 
         produtoService.atualizar(1, produtoAtualizado, null);
 
         verify(produtoRepository).save(any(Produto.class));
+        assertEquals("Produto Atualizado", produto.getNome());
+        assertEquals("Nova descrição", produto.getDescricao());
+        assertEquals(150.0, produto.getPreco());
     }
 
     @Test
-    void testAtualizarProdutoComNovasImagens() throws Exception {
+    void testAtualizar_ComNovasImagens_ComSucesso() throws Exception {
         Produto produtoAtualizado = new Produto();
-        List<MultipartFile> novasImagens = List.of(imagem);
+        produtoAtualizado.setNome("Produto Atualizado");
+        List<MultipartFile> novasImagens = Arrays.asList(imagem1);
 
-        when(authService.getPessoaAutenticada()).thenReturn(pessoaUsuario);
+        when(authService.getPessoaAutenticada()).thenReturn(anunciante);
         when(produtoRepository.findById(1)).thenReturn(Optional.of(produto));
-        when(imagem.getSize()).thenReturn(1024L);
-        when(imagemService.processarImagem(any())).thenReturn("nova_imagem_base64");
+        when(imagem1.getSize()).thenReturn(1024L);
+        when(imagemService.processarImagem(imagem1)).thenReturn("nova_imagem_base64");
+        when(produtoRepository.save(any(Produto.class))).thenReturn(produto);
 
         produtoService.atualizar(1, produtoAtualizado, novasImagens);
 
         verify(produtoRepository).save(any(Produto.class));
-        verify(imagemService).processarImagem(imagem);
+        verify(imagemService).processarImagem(imagem1);
     }
 
     @Test
-    void testAtualizarProdutoComImagensExistentesENovas() throws Exception {
+    void testAtualizar_UsuarioNaoAutorizado_DeveLancarExcecao() {
         Produto produtoAtualizado = new Produto();
-        produtoAtualizado.setImagens(Arrays.asList("imagem_existente"));
-        List<MultipartFile> novasImagens = List.of(imagem);
 
-        when(authService.getPessoaAutenticada()).thenReturn(pessoaUsuario);
-        when(produtoRepository.findById(1)).thenReturn(Optional.of(produto));
-        when(imagem.getSize()).thenReturn(1024L);
-        when(imagemService.processarImagem(any())).thenReturn("nova_imagem_base64");
-
-        produtoService.atualizar(1, produtoAtualizado, novasImagens);
-
-        verify(produtoRepository).save(any(Produto.class));
-    }
-
-    @Test
-    void testAtualizarProdutoNaoAutorizado() {
-        Produto produtoAtualizado = new Produto();
-        Pessoa outraPessoa = new Pessoa();
-        outraPessoa.setId(999);
-        outraPessoa.setPerfil(EnumPerfil.USUARIO);
-
-        when(authService.getPessoaAutenticada()).thenReturn(outraPessoa);
+        when(authService.getPessoaAutenticada()).thenReturn(outroUsuario);
         when(produtoRepository.findById(1)).thenReturn(Optional.of(produto));
 
         LudiBoxException exception = assertThrows(LudiBoxException.class,
                 () -> produtoService.atualizar(1, produtoAtualizado, null));
 
-        assertEquals("Apenas o anunciante pode atualizar o anúncio.", exception.getMessage());
+        assertEquals("Atualização não permitida", exception.getCampo());
+        assertEquals("Apenas o anunciante pode atualizar o anúncio.", exception.getMensagem());
         assertEquals(HttpStatus.UNAUTHORIZED, exception.getHttpStatus());
     }
 
     @Test
-    void testAtualizarProdutoAdminPodeAtualizar() throws Exception {
+    void testAtualizar_AdminPodeAtualizar_ComSucesso() throws Exception {
         Produto produtoAtualizado = new Produto();
-        produtoAtualizado.setNome("Atualizado por Admin");
+        produtoAtualizado.setNome("Produto Atualizado pelo Admin");
 
-        when(authService.getPessoaAutenticada()).thenReturn(pessoaAdmin);
+        when(authService.getPessoaAutenticada()).thenReturn(admin);
         when(produtoRepository.findById(1)).thenReturn(Optional.of(produto));
+        when(produtoRepository.save(any(Produto.class))).thenReturn(produto);
 
         produtoService.atualizar(1, produtoAtualizado, null);
 
         verify(produtoRepository).save(any(Produto.class));
+        assertEquals("Produto Atualizado pelo Admin", produto.getNome());
     }
 
     @Test
-    void testAtualizarProdutoComMuitasImagens() {
+    void testAtualizar_ProdutoNaoEncontrado_DeveLancarExcecao() {
         Produto produtoAtualizado = new Produto();
-        List<MultipartFile> imagens = new ArrayList<>();
-        for (int i = 0; i < 5; i++) imagens.add(imagem);
 
-        when(authService.getPessoaAutenticada()).thenReturn(pessoaUsuario);
+        when(authService.getPessoaAutenticada()).thenReturn(anunciante);
+        when(produtoRepository.findById(1)).thenReturn(Optional.empty());
+
+        LudiBoxException exception = assertThrows(LudiBoxException.class,
+                () -> produtoService.atualizar(1, produtoAtualizado, null));
+
+        assertEquals("Anúncio não encontrado", exception.getCampo());
+        assertEquals("Anúncio com ID 1 não encontrado", exception.getMensagem());
+        assertEquals(HttpStatus.NOT_FOUND, exception.getHttpStatus());
+    }
+
+    @Test
+    void testAtualizar_MuitasImagens_DeveLancarExcecao() {
+        Produto produtoAtualizado = new Produto();
+        List<MultipartFile> imagens = Arrays.asList(imagem1, imagem2, imagem1, imagem2, imagem1); // 5 imagens
+
+        when(authService.getPessoaAutenticada()).thenReturn(anunciante);
         when(produtoRepository.findById(1)).thenReturn(Optional.of(produto));
 
         LudiBoxException exception = assertThrows(LudiBoxException.class,
                 () -> produtoService.atualizar(1, produtoAtualizado, imagens));
 
-        assertTrue(exception.getMessage().contains("Número máximo de imagens excedido"));
+        assertEquals("Imagens", exception.getCampo());
+        assertEquals("Número máximo de imagens excedido. Máximo permitido: 4", exception.getMensagem());
     }
 
-    @Test
-    void testAtualizarProdutoComImagemMuitoGrande() {
-        Produto produtoAtualizado = new Produto();
-        List<MultipartFile> imagens = List.of(imagem);
-
-        when(authService.getPessoaAutenticada()).thenReturn(pessoaUsuario);
-        when(produtoRepository.findById(1)).thenReturn(Optional.of(produto));
-        when(imagem.getSize()).thenReturn(3 * 1024 * 1024L);
-
-        LudiBoxException exception = assertThrows(LudiBoxException.class,
-                () -> produtoService.atualizar(1, produtoAtualizado, imagens));
-
-        assertTrue(exception.getMessage().contains("Tamanho máximo da imagem excedido"));
-    }
+    // ========== TESTES PARA atualizarStatus ==========
 
     @Test
-    void testAtualizarStatusComSucesso() throws Exception {
-        when(authService.getPessoaAutenticada()).thenReturn(pessoaUsuario);
+    void testAtualizarStatus_ComSucesso() {
+        when(authService.getPessoaAutenticada()).thenReturn(anunciante);
         when(produtoRepository.findById(1)).thenReturn(Optional.of(produto));
+        when(produtoRepository.save(any(Produto.class))).thenReturn(produto);
 
         produtoService.atualizarStatus(1, StatusProduto.INATIVO);
 
         verify(produtoRepository).save(any(Produto.class));
+        assertEquals(StatusProduto.INATIVO, produto.getStatus());
     }
 
     @Test
-    void testAtualizarStatusProdutoBloqueado() {
-        produto.setStatus(StatusProduto.BLOQUEADO);
-
-        when(authService.getPessoaAutenticada()).thenReturn(pessoaUsuario);
-        when(produtoRepository.findById(1)).thenReturn(Optional.of(produto));
-
-        LudiBoxException exception = assertThrows(LudiBoxException.class,
-                () -> produtoService.atualizarStatus(1, StatusProduto.ATIVO));
-
-        assertEquals("Somente administradores podem modificar o status de anúncios bloqueados", exception.getMessage());
-    }
-
-    @Test
-    void testAtualizarStatusNaoAutorizado() {
-        Pessoa outraPessoa = new Pessoa();
-        outraPessoa.setId(999);
-
-        when(authService.getPessoaAutenticada()).thenReturn(outraPessoa);
+    void testAtualizarStatus_UsuarioNaoAutorizado_DeveLancarExcecao() {
+        when(authService.getPessoaAutenticada()).thenReturn(outroUsuario);
         when(produtoRepository.findById(1)).thenReturn(Optional.of(produto));
 
         LudiBoxException exception = assertThrows(LudiBoxException.class,
                 () -> produtoService.atualizarStatus(1, StatusProduto.INATIVO));
 
-        assertEquals("Apenas o anunciante pode ativar/desativar o anúncio.", exception.getMessage());
+        assertEquals("Ação não autorizada.", exception.getCampo());
+        assertEquals("Apenas o anunciante pode ativar/desativar o anúncio.", exception.getMensagem());
+        assertEquals(HttpStatus.UNAUTHORIZED, exception.getHttpStatus());
     }
 
     @Test
-    void testAtualizarBloqueioDesbloqueandoProduto() throws Exception {
+    void testAtualizarStatus_ProdutoBloqueado_DeveLancarExcecao() {
         produto.setStatus(StatusProduto.BLOQUEADO);
 
+        when(authService.getPessoaAutenticada()).thenReturn(anunciante);
         when(produtoRepository.findById(1)).thenReturn(Optional.of(produto));
-        doNothing().when(authService).verificarPermissaoAdmin();
 
-        produtoService.atualizarBloqueio(1);
+        LudiBoxException exception = assertThrows(LudiBoxException.class,
+                () -> produtoService.atualizarStatus(1, StatusProduto.ATIVO));
 
-        verify(produtoRepository).save(argThat(p -> p.getStatus() == StatusProduto.ATIVO));
+        assertEquals("Ação inválida", exception.getCampo());
+        assertEquals("Somente administradores podem modificar o status de anúncios bloqueados", exception.getMensagem());
+        assertEquals(HttpStatus.UNAUTHORIZED, exception.getHttpStatus());
     }
 
     @Test
-    void testAtualizarBloqueioBloqueandoProduto() throws Exception {
-        produto.setStatus(StatusProduto.ATIVO);
+    void testAtualizarStatus_ProdutoNaoEncontrado_DeveLancarExcecao() {
+        when(authService.getPessoaAutenticada()).thenReturn(anunciante);
+        when(produtoRepository.findById(1)).thenReturn(Optional.empty());
 
-        when(produtoRepository.findById(1)).thenReturn(Optional.of(produto));
-        doNothing().when(authService).verificarPermissaoAdmin();
+        LudiBoxException exception = assertThrows(LudiBoxException.class,
+                () -> produtoService.atualizarStatus(1, StatusProduto.INATIVO));
 
-        produtoService.atualizarBloqueio(1);
-
-        verify(produtoRepository).save(argThat(p -> p.getStatus() == StatusProduto.BLOQUEADO));
+        assertEquals("Anúncio não encontrado", exception.getCampo());
+        assertEquals("Anúncio com ID 1 não encontrado", exception.getMensagem());
+        assertEquals(HttpStatus.NOT_FOUND, exception.getHttpStatus());
     }
 
     @Test
-    void testAtualizarBloqueioSemPermissao() throws Exception {
-        doThrow(new LudiBoxException("Sem permissão", "Admin necessário", HttpStatus.FORBIDDEN))
+    void testAtualizarBloqueio_SemPermissaoAdmin_DeveLancarExcecao() {
+        doThrow(new LudiBoxException("Permissão", "Acesso negado", HttpStatus.UNAUTHORIZED))
                 .when(authService).verificarPermissaoAdmin();
 
-        assertThrows(LudiBoxException.class, () -> produtoService.atualizarBloqueio(1));
+        LudiBoxException exception = assertThrows(LudiBoxException.class,
+                () -> produtoService.atualizarBloqueio(1));
+
+        assertEquals("Permissão", exception.getCampo());
+        assertEquals("Acesso negado", exception.getMensagem());
     }
 
     @Test
-    void testDeletarProdutoComSucesso() throws Exception {
-        when(authService.getPessoaAutenticada()).thenReturn(pessoaUsuario);
+    void testDeletarProduto_AdminPodeDeletar_ComSucesso() {
+        when(authService.getPessoaAutenticada()).thenReturn(admin);
         when(produtoRepository.findById(1)).thenReturn(Optional.of(produto));
 
         produtoService.deletarProduto(1);
@@ -335,104 +336,78 @@ class ProdutoServiceTest {
     }
 
     @Test
-    void testDeletarProdutoNaoAutorizado() {
-        Pessoa outraPessoa = new Pessoa();
-        outraPessoa.setId(999);
-        outraPessoa.setPerfil(EnumPerfil.USUARIO);
-
-        when(authService.getPessoaAutenticada()).thenReturn(outraPessoa);
+    void testDeletarProduto_UsuarioNaoAutorizado_DeveLancarExcecao() {
+        when(authService.getPessoaAutenticada()).thenReturn(outroUsuario);
         when(produtoRepository.findById(1)).thenReturn(Optional.of(produto));
 
         LudiBoxException exception = assertThrows(LudiBoxException.class,
                 () -> produtoService.deletarProduto(1));
 
-        assertEquals("Apenas o anunciante pode excluir o anúncio.", exception.getMessage());
+        assertEquals("Exclusão não permitida", exception.getCampo());
+        assertEquals("Apenas o anunciante pode excluir o anúncio.", exception.getMensagem());
+        assertEquals(HttpStatus.UNAUTHORIZED, exception.getHttpStatus());
     }
 
     @Test
-    void testDeletarProdutoAdminPodeDeletar() throws Exception {
-        when(authService.getPessoaAutenticada()).thenReturn(pessoaAdmin);
-        when(produtoRepository.findById(1)).thenReturn(Optional.of(produto));
+    void testDeletarProduto_ProdutoNaoEncontrado_DeveLancarExcecao() {
+        when(authService.getPessoaAutenticada()).thenReturn(anunciante);
+        when(produtoRepository.findById(1)).thenReturn(Optional.empty());
 
-        produtoService.deletarProduto(1);
+        LudiBoxException exception = assertThrows(LudiBoxException.class,
+                () -> produtoService.deletarProduto(1));
 
-        verify(produtoRepository).delete(produto);
+        assertEquals("Anúncio não encontrado", exception.getCampo());
+        assertEquals("Anúncio com ID 1 não encontrado", exception.getMensagem());
     }
 
     @Test
-    void testBuscarTodosComProdutosAtivos() {
-        Produto produto1 = new Produto();
-        produto1.setId(1);
-        produto1.setNome("Produto 1");
-        produto1.setPreco(100.0);
-        produto1.setStatus(StatusProduto.INATIVO); // Diferente de ATIVO
-        produto1.setAnunciante(pessoaUsuario);
-        produto1.setImagens(Arrays.asList("imagem1"));
-
-        Produto produto2 = new Produto();
-        produto2.setId(2);
-        produto2.setNome("Produto 2");
-        produto2.setPreco(200.0);
-        produto2.setStatus(StatusProduto.BLOQUEADO); // Diferente de ATIVO
-        produto2.setAnunciante(pessoaUsuario);
-        produto2.setImagens(new ArrayList<>());
-
-        when(produtoRepository.findByAnuncianteSituacaoTrue())
-                .thenReturn(Arrays.asList(produto1, produto2));
+    void testBuscarTodos_ListaVazia() {
+        when(produtoRepository.findByAnuncianteSituacaoTrue()).thenReturn(new ArrayList<>());
 
         List<ProdutoListarDto> resultado = produtoService.buscarTodos();
 
-        assertEquals(2, resultado.size());
-        assertEquals("Produto 1", resultado.get(0).getNome());
-        assertEquals("Produto 2", resultado.get(1).getNome());
-        assertNull(resultado.get(1).getImagem()); // Lista vazia de imagens
+        assertTrue(resultado.isEmpty());
     }
 
     @Test
-    void testBuscarTodosComProdutoAtivo() {
-        Produto produtoAtivo = new Produto();
-        produtoAtivo.setId(1);
-        produtoAtivo.setStatus(StatusProduto.ATIVO);
-        produtoAtivo.setAnunciante(pessoaUsuario);
+    void testBuscarTodos_ProdutoSemImagem() {
+        produto.setImagens(new ArrayList<>());
+        produto.setStatus(StatusProduto.INATIVO);
 
-        when(produtoRepository.findByAnuncianteSituacaoTrue())
-                .thenReturn(Arrays.asList(produtoAtivo));
+        when(produtoRepository.findByAnuncianteSituacaoTrue()).thenReturn(Arrays.asList(produto));
 
         List<ProdutoListarDto> resultado = produtoService.buscarTodos();
 
-        assertEquals(0, resultado.size()); // Filtro exclui produtos ATIVO
+        assertEquals(1, resultado.size());
+        assertNull(resultado.get(0).getImagem());
     }
 
-    @Test
-    void testBuscarProdutoDetalhe() {
-        produto.setAltura(10);
-        produto.setLargura(20);
-        produto.setComprimento(30);
-        produto.setPesoSuportado(50);
-        produto.setDatasIndisponiveis(Arrays.asList(LocalDate.parse("2024-01-01"), LocalDate.parse("2024-01-02")));
-        pessoaUsuario.setImagemUsuarioEmBase64("imagem_usuario");
+    // ========== TESTES PARA buscar ==========
 
+    @Test
+    void testBuscar_ComSucesso() {
         when(produtoRepository.findByIdAndAnuncianteAtivo(1)).thenReturn(Optional.of(produto));
 
-        ProdutoDetalheDto dto = produtoService.buscar(1);
+        ProdutoDetalheDto resultado = produtoService.buscar(1);
 
-        assertEquals(1, dto.getId());
-        assertEquals("Produto Teste", dto.getNome());
-        assertEquals(10.0, dto.getAltura());
-        assertEquals(20.0, dto.getLargura());
-        assertEquals(30.0, dto.getComprimento());
-        assertEquals(50.0, dto.getPesoSuportado());
-        assertEquals("Descrição teste", dto.getDescricao());
-        assertEquals(100.0, dto.getPreco());
-        assertEquals(2, dto.getDatasIndisponiveis().size());
-        assertEquals(1, dto.getIdAnunciante());
-        assertEquals("Usuario Teste", dto.getNomeAnunciante());
-        assertEquals("imagem_usuario", dto.getImagemAnunciante());
-        assertEquals(2, dto.getImagens().size());
+        assertEquals(1, resultado.getId());
+        assertEquals("Produto Teste", resultado.getNome());
+        assertEquals("Descrição do produto teste", resultado.getDescricao());
+        assertEquals(100.0, resultado.getPreco());
+        assertEquals(10.0, resultado.getAltura());
+        assertEquals(20.0, resultado.getLargura());
+        assertEquals(30.0, resultado.getComprimento());
+        assertEquals(50.0, resultado.getPesoSuportado());
+        assertEquals(1, resultado.getIdAnunciante());
+        assertEquals("João Anunciante", resultado.getNomeAnunciante());
+        assertEquals("imagemAnunciante", resultado.getImagemAnunciante());
+        assertEquals(Arrays.asList("imagem1", "imagem2"), resultado.getImagens());
+        assertNotNull(resultado.getDataCadastro());
+        assertNotNull(resultado.getDatasIndisponiveis());
     }
 
     @Test
-    void testBuscarProdutoNaoEncontrado() {
+    void testBuscar_ProdutoNaoEncontrado_DeveLancarExcecao() {
         when(produtoRepository.findByIdAndAnuncianteAtivo(1)).thenReturn(Optional.empty());
 
         RuntimeException exception = assertThrows(RuntimeException.class,
@@ -441,9 +416,10 @@ class ProdutoServiceTest {
         assertEquals("Produto não encontrado", exception.getMessage());
     }
 
-    // TESTES PARA MÉTODO VALIDAR PRODUTO
+    // ========== TESTES PARA validarProduto ==========
+
     @Test
-    void testValidarProdutoExistente() throws Exception {
+    void testValidarProduto_ComSucesso() {
         when(produtoRepository.findById(1)).thenReturn(Optional.of(produto));
 
         Produto resultado = produtoService.validarProduto(1);
@@ -452,19 +428,21 @@ class ProdutoServiceTest {
     }
 
     @Test
-    void testValidarProdutoNaoEncontrado() {
+    void testValidarProduto_ProdutoNaoEncontrado_DeveLancarExcecao() {
         when(produtoRepository.findById(1)).thenReturn(Optional.empty());
 
         LudiBoxException exception = assertThrows(LudiBoxException.class,
                 () -> produtoService.validarProduto(1));
 
-        assertEquals("Anúncio com ID 1 não encontrado", exception.getMessage());
+        assertEquals("Anúncio não encontrado", exception.getCampo());
+        assertEquals("Anúncio com ID 1 não encontrado", exception.getMensagem());
         assertEquals(HttpStatus.NOT_FOUND, exception.getHttpStatus());
     }
 
-    // TESTES PARA MÉTODO LISTAR POR USUARIO
+    // ========== TESTES PARA listarPorUsuario ==========
+
     @Test
-    void testListarPorUsuario() {
+    void testListarPorUsuario_ComSucesso() {
         List<Produto> produtos = Arrays.asList(produto);
 
         when(produtoRepository.findByAnuncianteId(1)).thenReturn(produtos);
@@ -475,58 +453,148 @@ class ProdutoServiceTest {
         assertEquals(produto, resultado.get(0));
     }
 
-    // TESTES PARA MÉTODO BUSCAR COM FILTRO
     @Test
-    void testBuscarComFiltroComNome() {
-        produto.setImagens(Arrays.asList("imagem1"));
-        pessoaUsuario.setImagemUsuarioEmBase64("imagem_usuario");
+    void testListarPorUsuario_ListaVazia() {
+        when(produtoRepository.findByAnuncianteId(1)).thenReturn(new ArrayList<>());
+
+        List<Produto> resultado = produtoService.listarPorUsuario(1);
+
+        assertTrue(resultado.isEmpty());
+    }
+
+    // ========== TESTES PARA buscarComFiltro ==========
+
+    @Test
+    void testBuscarComFiltro_ComNome_ComSucesso() {
         Page<Produto> page = new PageImpl<>(Arrays.asList(produto));
+        Pageable pageable = PageRequest.of(0, 10);
 
         when(produtoRepository.findByNomeContainingIgnoreCaseAndStatusAndAnuncianteAtivo(
-                eq("Brin"), eq(StatusProduto.ATIVO), any(Pageable.class))).thenReturn(page);
+                "Produto", StatusProduto.ATIVO, pageable)).thenReturn(page);
 
-        Page<ProdutoListarDto> resultado = produtoService.buscarComFiltro("Brin", PageRequest.of(0, 10));
+        Page<ProdutoListarDto> resultado = produtoService.buscarComFiltro("Produto", pageable);
 
         assertEquals(1, resultado.getTotalElements());
         assertEquals("Produto Teste", resultado.getContent().get(0).getNome());
+        assertEquals(1, resultado.getContent().get(0).getId());
+        assertEquals(100.0, resultado.getContent().get(0).getPreco());
+        assertEquals(1, resultado.getContent().get(0).getIdAnunciante());
+        assertEquals("João Anunciante", resultado.getContent().get(0).getNomeAnunciante());
+        assertEquals("imagemAnunciante", resultado.getContent().get(0).getImagemAnunciante());
         assertEquals("imagem1", resultado.getContent().get(0).getImagem());
     }
 
     @Test
-    void testBuscarComFiltroSemNome() {
-        produto.setImagens(new ArrayList<>()); // Lista vazia
+    void testBuscarComFiltro_NomeVazio_ComSucesso() {
         Page<Produto> page = new PageImpl<>(Arrays.asList(produto));
+        Pageable pageable = PageRequest.of(0, 10);
 
-        when(produtoRepository.findByStatusAndAnuncianteAtivo(
-                eq(StatusProduto.ATIVO), any(Pageable.class))).thenReturn(page);
+        when(produtoRepository.findByStatusAndAnuncianteAtivo(StatusProduto.ATIVO, pageable))
+                .thenReturn(page);
 
-        Page<ProdutoListarDto> resultado = produtoService.buscarComFiltro(null, PageRequest.of(0, 10));
+        Page<ProdutoListarDto> resultado = produtoService.buscarComFiltro("", pageable);
 
         assertEquals(1, resultado.getTotalElements());
-        assertNull(resultado.getContent().get(0).getImagem()); // Imagem null quando lista vazia
+        assertEquals("Produto Teste", resultado.getContent().get(0).getNome());
     }
 
     @Test
-    void testBuscarComFiltroNomeVazio() {
+    void testBuscarComFiltro_NomeEmBranco_ComSucesso() {
         Page<Produto> page = new PageImpl<>(Arrays.asList(produto));
+        Pageable pageable = PageRequest.of(0, 10);
 
-        when(produtoRepository.findByStatusAndAnuncianteAtivo(
-                eq(StatusProduto.ATIVO), any(Pageable.class))).thenReturn(page);
+        when(produtoRepository.findByStatusAndAnuncianteAtivo(StatusProduto.ATIVO, pageable))
+                .thenReturn(page);
 
-        Page<ProdutoListarDto> resultado = produtoService.buscarComFiltro("", PageRequest.of(0, 10));
+        Page<ProdutoListarDto> resultado = produtoService.buscarComFiltro("   ", pageable);
 
         assertEquals(1, resultado.getTotalElements());
+        assertEquals("Produto Teste", resultado.getContent().get(0).getNome());
     }
 
     @Test
-    void testBuscarComFiltroNomeEmBranco() {
+    void testBuscarComFiltro_ProdutoSemImagem() {
+        produto.setImagens(new ArrayList<>());
         Page<Produto> page = new PageImpl<>(Arrays.asList(produto));
+        Pageable pageable = PageRequest.of(0, 10);
 
-        when(produtoRepository.findByStatusAndAnuncianteAtivo(
-                eq(StatusProduto.ATIVO), any(Pageable.class))).thenReturn(page);
+        when(produtoRepository.findByStatusAndAnuncianteAtivo(StatusProduto.ATIVO, pageable))
+                .thenReturn(page);
 
-        Page<ProdutoListarDto> resultado = produtoService.buscarComFiltro("   ", PageRequest.of(0, 10));
+        Page<ProdutoListarDto> resultado = produtoService.buscarComFiltro(null, pageable);
 
         assertEquals(1, resultado.getTotalElements());
+        assertNull(resultado.getContent().get(0).getImagem());
+    }
+
+    @Test
+    void testBuscarComFiltro_ResultadoVazio() {
+        Page<Produto> page = new PageImpl<>(new ArrayList<>());
+        Pageable pageable = PageRequest.of(0, 10);
+
+        when(produtoRepository.findByNomeContainingIgnoreCaseAndStatusAndAnuncianteAtivo(
+                "Inexistente", StatusProduto.ATIVO, pageable)).thenReturn(page);
+
+        Page<ProdutoListarDto> resultado = produtoService.buscarComFiltro("Inexistente", pageable);
+
+        assertEquals(0, resultado.getTotalElements());
+        assertTrue(resultado.getContent().isEmpty());
+    }
+
+    // ========== TESTES ADICIONAIS DE INTEGRAÇÃO ==========
+
+    @Test
+    void testFluxoCompleto_CriarAtualizarExcluir() throws Exception {
+        // Criar produto
+        List<MultipartFile> imagens = Arrays.asList(imagem1);
+
+        when(authService.getPessoaAutenticada()).thenReturn(anunciante);
+        when(imagem1.getSize()).thenReturn(1024L);
+        when(imagemService.processarImagem(imagem1)).thenReturn("base64_1");
+        when(produtoRepository.save(any(Produto.class))).thenReturn(produto);
+
+        produtoService.salvar(produto, imagens);
+        verify(produtoRepository).save(any(Produto.class));
+
+        // Atualizar produto
+        Produto produtoAtualizado = new Produto();
+        produtoAtualizado.setNome("Produto Atualizado");
+
+        when(produtoRepository.findById(1)).thenReturn(Optional.of(produto));
+
+        produtoService.atualizar(1, produtoAtualizado, null);
+        verify(produtoRepository, times(2)).save(any(Produto.class));
+
+        // Excluir produto
+        produtoService.deletarProduto(1);
+        verify(produtoRepository).delete(produto);
+    }
+
+    @Test
+    void testValidacaoTamanhoImagem_LimiteExato() throws Exception {
+        List<MultipartFile> imagens = Arrays.asList(imagem1);
+
+        when(authService.getPessoaAutenticada()).thenReturn(anunciante);
+        when(imagem1.getSize()).thenReturn(2 * 1024 * 1024L); // Exatamente 2MB
+        when(imagemService.processarImagem(imagem1)).thenReturn("base64_1");
+        when(produtoRepository.save(any(Produto.class))).thenReturn(produto);
+
+        assertDoesNotThrow(() -> produtoService.salvar(produto, imagens));
+        verify(produtoRepository).save(any(Produto.class));
+    }
+
+    @Test
+    void testValidacaoQuantidadeImagens_LimiteExato() throws Exception {
+        List<MultipartFile> imagens = Arrays.asList(imagem1, imagem2, imagem1, imagem2); // Exatamente 4 imagens
+
+        when(authService.getPessoaAutenticada()).thenReturn(anunciante);
+        when(imagem1.getSize()).thenReturn(1024L);
+        when(imagem2.getSize()).thenReturn(1024L);
+        when(imagemService.processarImagem(any())).thenReturn("base64");
+        when(produtoRepository.save(any(Produto.class))).thenReturn(produto);
+
+        assertDoesNotThrow(() -> produtoService.salvar(produto, imagens));
+        verify(produtoRepository).save(any(Produto.class));
+        verify(imagemService, times(4)).processarImagem(any());
     }
 }
